[gd_scene load_steps=15 format=3 uid="uid://j2ww0v4elkmc"]

[ext_resource type="PackedScene" uid="uid://dqwh1eeuvmfht" path="res://battle/attack/scn_ennemi_attack_base.tscn" id="1_8qmd2"]
[ext_resource type="Texture2D" uid="uid://cubpnuvmwnk3y" path="res://battle/attack/assets/tex_flic_arm.png" id="2_bivv7"]
[ext_resource type="Script" path="res://battle/attack/script_atk_flic_000.gd" id="2_cipnk"]
[ext_resource type="Texture2D" uid="uid://6jbryjklpu6k" path="res://battle/attack/assets/tex_bob_attack_000.png" id="4_hkqcs"]
[ext_resource type="Texture2D" uid="uid://dy2vujta3ty8p" path="res://battle/attack/assets/tex_flic_arm_swing.png" id="5_kgpij"]
[ext_resource type="Texture2D" uid="uid://dbilcierpl3kl" path="res://battle/attack/assets/tex_hit.png" id="5_tq5jq"]
[ext_resource type="Texture2D" uid="uid://ck115btlengf4" path="res://battle/attack/assets/tex_flic_battle.png" id="7_2h8hr"]

[sub_resource type="Animation" id="Animation_25cya"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NinePatchRect/TexFlicArm:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NinePatchRect/TexFlicArm:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_bivv7")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("NinePatchRect/TexFlicBattle:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_27dce"]
resource_name = "attack"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NinePatchRect/TexFlicArm:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5, 0.6, 0.7, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.872665, 0.959931, -1.5708, -1.39626, -1.5708, -1.48353, -1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NinePatchRect/TexFlicArm:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("2_bivv7"), ExtResource("5_kgpij"), ExtResource("2_bivv7")]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_dodge"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("NinePatchRect/TexBobFlicAvoid:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("NinePatchRect/TexHit:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("NinePatchRect/TexBobFlicAvoid:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(32, 112)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("NinePatchRect/TexBobFlicAvoid:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("NinePatchRect/TexFlicBattle:frame_coords")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yla64"]
_data = {
"RESET": SubResource("Animation_25cya"),
"attack": SubResource("Animation_27dce")
}

[sub_resource type="Animation" id="Animation_x64uq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NinePatchRect/TexBobFlicAvoid:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(32, 96)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NinePatchRect/TexBobFlicAvoid:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("NinePatchRect/TexHit:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("NinePatchRect/TexBobFlicAvoid:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_46i2s"]
resource_name = "dodge"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NinePatchRect/TexBobFlicAvoid:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(32, 112), Vector2(24, 112), Vector2(-32, 96), Vector2(-16, 112), Vector2(-8, 112), Vector2(-16, 112)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NinePatchRect/TexBobFlicAvoid:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0785398, -0.97913, 0.0, 0.123918, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("NinePatchRect/TexBobFlicAvoid:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_u1tev"]
resource_name = "kill"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NinePatchRect/TexBobFlicAvoid:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(32, 96), Vector2(8, 48), Vector2(-8, 40), Vector2(-48, 56), Vector2(-64, 200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NinePatchRect/TexBobFlicAvoid:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.479966, -7.82431]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("NinePatchRect/TexHit:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(40, 80)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("NinePatchRect/TexHit:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(1e-05, 1e-05)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("NinePatchRect/TexBobFlicAvoid:frame_coords")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 1), Vector2i(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_linm6"]
_data = {
"RESET": SubResource("Animation_x64uq"),
"dodge": SubResource("Animation_46i2s"),
"kill": SubResource("Animation_u1tev")
}

[node name="ennemi_attack_base" instance=ExtResource("1_8qmd2")]
script = ExtResource("2_cipnk")

[node name="NinePatchRect" parent="." index="0"]
offset_top = -64.0
offset_bottom = 64.0

[node name="TexFlicArm" type="Sprite2D" parent="NinePatchRect" index="0"]
position = Vector2(128, 64)
texture = ExtResource("2_bivv7")
offset = Vector2(-35, -40)

[node name="TexBobFlicAvoid" type="Sprite2D" parent="NinePatchRect" index="1"]
position = Vector2(32, 96)
texture = ExtResource("4_hkqcs")
offset = Vector2(0, -8)
hframes = 8
vframes = 2

[node name="TexHit" type="Sprite2D" parent="NinePatchRect" index="2"]
position = Vector2(40, 80)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("5_tq5jq")

[node name="TexFlicBattle" type="Sprite2D" parent="NinePatchRect" index="3"]
position = Vector2(136, 32)
texture = ExtResource("7_2h8hr")
hframes = 3

[node name="flic_anim" type="AnimationPlayer" parent="." index="1"]
libraries = {
"": SubResource("AnimationLibrary_yla64")
}

[node name="bob_anim" type="AnimationPlayer" parent="." index="2"]
libraries = {
"": SubResource("AnimationLibrary_linm6")
}

[node name="dodge_timer" type="Timer" parent="." index="3"]
wait_time = 0.2

[connection signal="timeout" from="dodge_timer" to="." method="_on_dodge_timer_timeout"]
